[package]
name = "cut-optimizer-2d-server"
version = "0.2.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
repository = "https://github.com/jasonrhansen/cut-optimizer-2d-server.git"
keywords = ["cuts", "optimize", "optimization", "bin-packing", "bin-packer"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cut-optimizer-2d = { git = "https://github.com/3-form/cut-optimizer-2d", branch = "master", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.8"
